--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,7 @@ version: '3'
 services:
   remembrancer:
     image: "mysql:5.7.22"
+    command: --default-authentication-plugin=mysql_native_password
+    restart=always
+    environment:
+      - MYSQL_RANDOM_ROOT_PASSWORD = true
