--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart=always
     environment:
-      - MYSQL_RANDOM_ROOT_PASSWORD = true
+      - MYSQL_RANDOM_ROOT_PASSWORD: true
