--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,6 @@ services:
     restart: always
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=true
+  astropath:
+    image: "rabbitmq:3.7.7"
+    restart: always
