adding new definition to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     networks:
       - aqmp
     restart: always
+  cogitator:
+    build:
+      context: https://github.com/itsgc/twitch-servitor.git
 networks:
   aqmp:
   cogitator:
