adding new definition to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     restart: always
   cogitator:
     build:
-      context: https://github.com/itsgc/twitch-servitor.git
+      context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/initial
 networks:
   aqmp:
   cogitator:
