--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     restart: always
   cogitator:
     build:
+      args:
+        - credsfile
       context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/initial
 networks:
   aqmp:
