adding parameters to handle secrets and settings file location

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,10 @@ services:
   cogitator:
     build:
       args:
-        - credsfile
+        - creds
+        - settingsfile="/code/settings.yml"
+        - secretsdir = "/etc/secrets"
+        - secretsfile="/etc/secrets/creds.yml"
       context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/initial
 networks:
   aqmp:
