--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,14 @@ services:
   cogitator:
     build:
       args:
-        - creds
         - settingsfile=/code/settings.yml
         - secretsdir=/etc/secrets
         - secretsfile=/etc/secrets/creds.yml
       context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/initial
+      volumes:
+        - type: bind
+          source: ../twitch-servitor/creds.yml
+          target: /etc/secrets/creds.yml
 networks:
   aqmp:
   cogitator:
