--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 version: '3.2'
 services:
-#  remembrancer:
-#   image: "mysql:5.7.22"
-#    command: --default-authentication-plugin=mysql_native_password
-#    networks:
-#      - database
-#    restart: always
-#    environment:
-#      - MYSQL_RANDOM_ROOT_PASSWORD=true
-#  astropath:
-#    image: "rabbitmq:3.7.7"
-#    networks:
-#      - aqmp
-#    restart: always
-#
+  remembrancer:
+    image: "mysql:5.7.22"
+    command: --default-authentication-plugin=mysql_native_password
+    networks:
+      - database
+    restart: always
+    environment:
+      - MYSQL_RANDOM_ROOT_PASSWORD=true
+  astropath:
+    image: "rabbitmq:3.7.7"
+    networks:
+      - aqmp
+    restart: always
   cogitator:
     build:
       args:
