--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     restart: always
     environment:
       - MYSQL_RANDOM_ROOT_PASSWORD=true
+      - MYSQL_DATABASE
+      - MYSQL_USER
+      - MYSQL_PASSWORD
   astropath:
     image: "rabbitmq:3.7.7"
     restart: always
