--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - MYSQL_PASSWORD
   astropath:
     image: "rabbitmq:3.7.7"
+    ports:
     restart: always
   cogitator:
     build:
