--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/initial
     depends_on:
       - remembrancer
-    command: ["./wait-for-it.sh", "remembrancer:3306", "--", "uwsgi",
+    command: ["/code/wait-for-it.sh", "remembrancer:3306", "--", "uwsgi",
               "--enable-threads", "--uid", "www-data", "--gid",
               "www-data", "--ini", "/code/uwsgi.ini"]
     ports:
