--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,23 @@ services:
       - MYSQL_DATABASE
       - MYSQL_USER
       - MYSQL_PASSWORD
-  astropath:
+  astronomican:
     image: "rabbitmq:3.7.7"
     restart: always
+  auscultator:
+    image: twitch-servitor
+    depends_on:
+      - cogitator
+    command: ["/usr/bin/env", "python", "/code/server-websocket.py"]
+    ports:
+      - "127.0.0.1:9080:8080"
+  astropath:
+    image: twitch-servitor
+    depends_on:
+      - astronomican
+      - auscultator
+    command: ["/code/wait-for-is.sh", "astronomican:5672", "--", "/usr/bin/env",
+              "python", "/code/rabbitmq-receiver.py"]
   cogitator:
     build:
       args:
@@ -31,12 +45,3 @@ services:
       - type: bind
         source: ../twitch-servitor/creds.yml
         target: /etc/secrets/creds.yml
-  auscultator:
-    image: twitch-servitor
-    depends_on:
-      - cogitator
-    command: ["/usr/bin/env", "python", "/code/server-websocket.py"]
-    ports:
-      - "127.0.0.1:9080:8080"
-
-
