--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       - astronomican
       - auscultator
-    command: ["/code/wait-for-it.sh", "--timeout", "30", "astronomican:5672", "--",
+    command: ["/code/wait-for-it.sh", "--timeout=30", "astronomican:5672", "--",
               "/code/wait-for-it.sh", "auscultator:8080", "--",
               "/usr/bin/env", "python", "/code/rabbitmq-receiver.py"]
   cogitator:
