adding env variable for pubsub specific creds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
               "/usr/bin/env", "python", "/code/rabbitmq-receiver.py"]
   tithe-collector:
     image: twitch-servitor
+    environment:
+      - PUBSUB_SECRETS_FILE = /etc/secrets/pubsub_creds.yml
     depends_on:
     - astronomican
     command: ["/code/wait-for-it.sh", "--timeout=30", "astronomican:5672", "--",
