--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,3 +61,9 @@ services:
       - type: bind
         source: ../twitch-servitor/pubsub_creds.yml
         target: /etc/secrets/pubsub_creds.yml
+  vigil:
+    image: twitch-servitor
+    depends_on:
+    - astronomican
+    command: ["/code/wait-for-it.sh", "--timeout=30", "astronomican:5672", "--",
+              "/usr/bin/env", "python", "/code/vigil.py"]
