--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
         - settingsfile=/code/settings.yml
         - secretsdir=/etc/secrets
         - secretsfile=/etc/secrets/creds.yml
-      context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/betterdb
+      context: https://github.com/itsgc/twitch-servitor.git#u/itsgc/permacodes
     image: twitch-servitor
     depends_on:
       - remembrancer
